--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,52 +39,64 @@
                 <div class="col">
                       <!-- https://getbootstrap.com/docs/4.0/components/card/#example -->
                     <div class="card-body">
+                        <!-- Search input goes here -->
+
                         <div class="card" style="width: 18rem;">
                             <div class="card-body bg-light">
                                 <h6 class="card-subtitle mb-2 text-muted text-left">Search for the weather conditions in a city</h6>
                                 <div class="input-group mb-3">
-                                    <!-- search input area -->
-                                    <input type="text" class="form-control" placeholder="Enter a city"
+                                     <!-- search input area -->
+                                     <!-- established class -->
+                                    <input type="text" class="form-control searchInput" placeholder="Enter a city"
                                         aria-label="Recipient's username" aria-describedby="button-addon2">
                                     <div class="input-group-append">
                                         <!-- button area -->
-                                        <button class="btn btn-outline-secondary bg-primary text-white" type="button"             id="button-addon2"><i class="fas fa-search"></i></button>
+                                        <!-- established class -->
+                                        <button class="btn btn-outline-secondary bg-primary searchButton" type="button"
+                                            id="button-addon2"><i class="fas fa-search"></i></button>
                                     </div>
                                 </div>
 
-                                    <!-- list that shows cities searched -->
-                                    <ul class="list-group text-left text-white bg-primary"></ul>
+                                  <!-- list that shows cities searched -->
+                                  <ul class="list-group text-left text-white bg-primary"></ul>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                                <!-- current weather box-->
-                                <div class="col mt-4 mr-5">
-                                    <div class="card pb-2 pt-1 bg-primary text-white">
-                                        <h5 class="card-title mt-2 text-center">Forecast Now</h5>
-                                    </div>
+                <!-- current weather box-->
+                <div class="col mt-4 mr-5">
+                    <!-- established class -->
+                    <div class="card currentCard pb-2 pt-1 bg-primary text-white">
+                        <h5 class="card-title mt-2 text-center">Forecast Now</h5>
+                        <!-- temp for tests -->
+                        <p class="name"></p>
+                        <p class="desc"></p>
+                        <p class="temp"></p>
+                    </div>
+                </div>
+                <!--5 day forecast-->
+                <div class="row">
+                    <div class="col mt-4">
+                        <!-- established class -->
+                        <div class="card pb-5 pl-5 bg-primary text-white fiveDayCard">
+                            <h5 class="card-title mt-2 mr-5 text-center">5-Day Forecast </h5>
+                            <div class="row">
+                                <!-- established class -->
+                                <div class="col fiveDayOne">
                                 </div>
 
+                            </div>
 
-                                <!--5 day forecast-->
-                                <div class="row">
-                                    <div class="col mt-4">
-                                        <div class="card pb-5 pl-5 bg-primary text-white">
-                                        <h5 class="card-title mt-2 mr-5 text-center">5-Day Forecast </h5>
-                                        <div class="row">
-                                            <div class="col"> </div>
-                                        </div>
-
-                                        </div>
-                                    </div>
-                                </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
-    <!-- js link here-->
+    <!-- JS script -->
     <script src="./Assets/script.js"></script>
+    <!-- jquery-->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
 </body>
 
