Added moment js link, bg-primary to card-body and classes fiveDayBox and currentBox

--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
                                 </div>
 
                                   <!-- list that shows cities searched -->
-                                  <ul class="list-group text-left text-white bg-primary"></ul>
+                                  <ul class="list-group text-left text-dark bg-primary">
+                                  </ul>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- current weather box-->
-                <div class="col mt-4 mr-5">
+                <div class="currentBox col mt-4 mr-5">
                     <!-- established class -->
+                    <h5 class="card-title mt-2 text-center">Forecast Now</h5>
                     <div class="card currentCard pb-2 pt-1 bg-primary text-white">
-                        <h5 class="card-title mt-2 text-center">Forecast Now</h5>
                         <!-- classes for data inside box -->
                         <p><span class="city"></span> </p>
                         <p><span class="desc"></span></p> 
@@ -80,7 +81,7 @@
                 </div>
                 <!--5 day forecast-->
                 <div class="row">
-                    <div class="col-12">
+                    <div class="fiveDayBox col-12">
                         <!--established class -->
                             <h5 class="card-title mt-2 mr-5 text-center">5-Day Forecast </h5>
                             <div class="col fiveDay">
